--- a/css/style.scss
+++ b/css/style.scss
@@ -52,6 +52,17 @@ body{
         }
     }
 
+    .menu{
+        .input-color{
+            border-radius: 2px;
+            width: 35px;
+        }
+        .btn-menu{
+            width: 35px;
+            padding: 5px;
+        }
+    }
+
     footer{
         background: #151513;
         color: #FFFFFF;
