--- a/css/style.scss
+++ b/css/style.scss
@@ -76,6 +76,10 @@ html{
                     box-shadow      : 0 0 0 0.25rem rgba(130,138,145,.5);
                 }
             }
+
+            .input-group{
+                width: 75%;
+            }
         }
     
         #bar{
@@ -139,6 +143,18 @@ html{
                 &:focus{
                     outline-width : 0;
                 }
+            }
+
+            .placeholder{
+                height              : 100%;
+                background-color    : #F9FCFF;
+            }
+
+            .web-display{
+                height              : 100%;
+                width               : 100%;
+                overflow-y          : auto;
+                border              : none;
             }
         }
     
